--- a/package.json
+++ b/package.json
@@ -14,32 +14,37 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/cli": "^7.7.5",
-    "@babel/core": "^7.7.5",
-    "@babel/preset-env": "^7.7.6",
-    "@babel/preset-react": "^7.7.4",
-    "babel-loader": "^8.0.0",
-    "clean-webpack-plugin": "^1.0.1",
-    "css-loader": "^3.4.0",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.15.1",
-    "file-loader": "^1.1.11",
-    "html-webpack-plugin": "^4.0.0-beta.11",
+    "@babel/cli": "^7.24.5",
+    "@babel/core": "^7.24.5",
+    "@babel/preset-env": "^7.24.5",
+    "@babel/preset-react": "^7.24.1",
+    "babel-loader": "^9.1.3",
+    "buffer": "^6.0.3",
+    "clean-webpack-plugin": "^4.0.0",
+    "crypto-browserify": "^3.12.0",
+    "css-loader": "^7.1.1",
+    "dotenv-webpack": "^8.1.0",
+    "enzyme": "^3.11.0",
+    "@cfaester/enzyme-adapter-react-18": "^0.8.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.6.0",
     "isomorphic-fetch": "^3.0.0",
-    "jest": "^24.9.0",
-    "node-sass": "^4.13.0",
-    "regenerator-runtime": "^0.13.3",
-    "sass-loader": "^7.3.1",
-    "style-loader": "^0.21.0",
-    "webpack": "^4.41.3",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0"
+    "jest": "^29.7.0",
+    "node-sass": "^9.0.0",
+    "regenerator-runtime": "^0.14.1",
+    "sass-loader": "^14.2.1",
+    "stream": "^0.0.2",
+    "style-loader": "^4.0.0",
+    "util": "^0.12.5",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4",
+    "zip-webpack-plugin": "^4.0.1"
   },
   "dependencies": {
-    "core-js": "^3.5.0",
-    "jsonwebtoken": "^8.5.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "core-js": "^3.37.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "babel": {
     "presets": [
