--- a/package.json
+++ b/package.json
@@ -18,23 +18,30 @@
     "@babel/core": "^7.24.5",
     "@babel/preset-env": "^7.24.5",
     "@babel/preset-react": "^7.24.1",
+    "@cfaester/enzyme-adapter-react-18": "^0.8.0",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.13",
+    "autoprefixer": "^10.4.19",
     "babel-loader": "^9.1.3",
     "buffer": "^6.0.3",
     "clean-webpack-plugin": "^4.0.0",
     "crypto-browserify": "^3.12.0",
     "css-loader": "^7.1.1",
+    "daisyui": "^4.11.1",
     "dotenv-webpack": "^8.1.0",
     "enzyme": "^3.11.0",
-    "@cfaester/enzyme-adapter-react-18": "^0.8.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.0",
     "isomorphic-fetch": "^3.0.0",
     "jest": "^29.7.0",
     "node-sass": "^9.0.0",
+    "postcss": "^8.4.38",
+    "postcss-loader": "^8.1.1",
     "regenerator-runtime": "^0.14.1",
     "sass-loader": "^14.2.1",
     "stream": "^0.0.2",
     "style-loader": "^4.0.0",
+    "tailwindcss": "^3.4.3",
     "util": "^0.12.5",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
