--- a/package.json
+++ b/package.json
@@ -49,9 +49,14 @@
     "zip-webpack-plugin": "^4.0.1"
   },
   "dependencies": {
+    "@loadable/component": "^5.16.4",
+    "axios": "^1.7.2",
+    "classnames": "^2.5.1",
     "core-js": "^3.37.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
+    "swiper": "^11.1.3"
   },
   "babel": {
     "presets": [
